# gpgrv

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: gpgv.rs  readme.rs
src/: armour.rs  digestable.rs  errors.rs  hash_multimap.rs  high.rs  keyring.rs  lib.rs  load.rs  manyread.rs  mpi.rs  packets.rs  rsa.rs  short_string.rs  verify.rs
tests/: debian.rs  empty-message.inline-sig  fast.asc  faux.pubkey  faux_pub.asc  formats.rs  real-world-dizziest.gpg  smoke.rs
tests/deb/: example-InRelease
tests/deb/2023.09.24/: keyring.gpg
tests/deb/jessie-kfreebsd/: InRelease
tests/formats/: gen.sh  output.dat.detach-armour  output.dat.detach-binary  output.dat.inline-armour  output.dat.inline-binary  output.txt.detach-armour  output.txt.detach-binary  output.txt.inline-armour  output.txt.inline-binary
tests/smoke/: hello-world.asc
tests/unknown/: really-short.asc
