[package]
authors = ["Chris West (Faux) <git@goeswhere.com>"]
categories = [
    "authentication",
    "cryptography",
    "parsing",
]
description = "Pure-Rust implementation of gpgv, to verify gpg signatures"
name = "gpgrv"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/FauxFaux/gpgrv"
version = "0.3.0"

edition = "2021"

[badges.travis-ci]
repository = "FauxFaux/gpgrv"

[dependencies]
anyhow = "1"
base64 = "0.12"
byteorder = "1"
digest = "0.9"
hex = "0.4"
iowrap = "0.2"
libflate = "1"
memchr = "2"
num = "0.3"
sha-1 = "0.9"
sha2 = "0.9"

[dev-dependencies]
clap = "2"
distro-keyring = "0.1"
tempfile = "3"

[profile.release]
lto = true
