[package]
authors = ["Chris West (Faux) <git@goeswhere.com>"]
categories = [
    "authentication",
    "cryptography",
    "parsing",
]
description = "Pure-Rust implementation of gpgv, to verify gpg signatures"
name = "gpgrv"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/FauxFaux/gpgrv"
version = "0.4.1"

edition = "2024"

[dependencies]
anyhow = "1"
base64 = "0.22"
byteorder = "1"
digest = "0.11"
iowrap = "0.2"
libflate = "2"
memchr = "2"
num = "0.4"
sha1 = "0.11"
sha2 = "0.11"

[dev-dependencies]
clap = { version = "4", features = ["cargo"] }
distro-keyring = "0.3"
tempfile = "3"

[profile.release]
lto = true
